--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <div class="navbar">
-            <h1>Simone</h1>
+            <h1>simo</h1>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">about</a></li>
